Worked on a directive to clean up code. Some UI changes

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -72,8 +72,14 @@
             </a>
 
         </div>
-        <h4>Raw</h4>
-        <pre>{{allInstApps|json}}</pre>
+
+
+        <a href="" ng-model="collapsedAppInst" ng-click="collapsedAppInst=!collapsedAppInst"><strong>Toggle (show/hide)</strong> json data</a>
+
+        <div ng-show="collapsedAppInst">
+            <pre>{{app.applications|json}}</pre>
+        </div>
+
     </div>
 
 </div>
