Changed Application POST data to match the controller.

--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -1,7 +1,7 @@
 <h4>LB FORM</h4>
 
 <h3>New Load Balancer </h3>
-
+<pre>{{loadBalancer|json}}</pre>
 <form role="form" ng-submit="createLoadBalancer()">
 
     <div class="form-group">
