--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -63,7 +63,7 @@
             </div>
             <div class="form-group">
                 <label for="selectAppGroup">Application Group</label>
-                <select ng-model="app.group" name="group" id="selectAppGroup"  ng-options=" v.id as v.name for v in allAppGroups" class="form-control">
+                <select ng-model="app.applicationGroupId" name="applicationGroupId" id="selectAppGroup"  ng-options=" v.id as v.name for v in allAppGroups" class="form-control">
                     <option value="">Select group (or create one above)</option>
                 </select>
             </div>
