Changed names data to match the controller.

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -67,7 +67,7 @@
         <h3>All Application Instances of '{{app.name}}'  </h3>
 
         <div class="list-group">
-            <a href="#/appInst/{{a.id}}" class="list-group-item" ng-repeat="a in app.applications">
+            <a href="#/appInst/{{a.id}}" class="list-group-item" ng-repeat="a in app.applicationInstances">
                 <b> {{a.name}}</b> ({{a.id}}) {{a.host}}/{{a.path}}:{{a.port}}
             </a>
 
