--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -4,6 +4,7 @@
 <ul class="list-unstyled">
     <li>ID : {{app.id}}</li>
     <li>Number of instances : {{app.applications.length}}</li>
+    <li>In group : {{appGroup.name}} ({{app.applicationGroupId}})</li>
 
 </ul>
    <!--
