Updated LoadBalancer live view of the config file. Fixed linebreaks

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -52,7 +52,7 @@
 
     <button type="button" class="btn btn-primary btn-lg" ng-model="collapseConfig" ng-click="collapseConfig=!collapseConfig">Show/Hide HA Proxy config file</button>
 
-
+    <!--<p style="white-space: pre;">{{ configFile}}</p>-->
 
     <div ng-show="!collapseConfig">
 
