--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -61,6 +61,7 @@
                        required
                        placeholder="Enter public url">
             </div>
+
             <div class="form-group">
                 <label for="selectAppGroup">Application Group</label>
                 <select ng-model="app.applicationGroupId" name="applicationGroupId" id="selectAppGroup"  ng-options=" v.id as v.name for v in allAppGroups" class="form-control">
@@ -134,6 +135,12 @@
                 <input type="text" ng-model="lb.installationPath" class="form-control " id="inLbPath"
                        required
                        placeholder="Enter path">
+            </div>
+            <div class="form-group">
+                <label for="inAppPublicPort">Public Port </label>
+                <input type="number" ng-model="lb.publicPort" class="form-control " id="inAppPublicPort" name="publicPort"
+                       required
+                       placeholder="Enter public port (Listen port)">
             </div>
             <div class="form-group">
                 <label for="inLbHost">SSH Key</label>
