delete button for LB

--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -3,6 +3,8 @@
     <li><a href="#">Library</a></li>
     <li class="active">Data</li>
 </ol>
+
+<a href back-button>back</a>
 <div class="row">
     <h1>Application Instance Details</h1>
 
