--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -1,10 +1,4 @@
-<ol class="breadcrumb">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Library</a></li>
-    <li class="active">Data</li>
-</ol>
 
-<a href back-button>back</a>
 <div class="row">
     <h1>Application Instance Details</h1>
 
@@ -12,7 +6,7 @@
     <div class="col-sm-6">
         <h3>Status</h3>
 
-        <button type="button" class="btn btn-success">Start</button>
+       <!-- <button type="button" class="btn btn-success">Start</button>
         <button type="button" class="btn btn-warning">Stop</button>
         <div class="alert alert-success">The instance is running
 
@@ -30,7 +24,7 @@
 
         </div>
 
-
+-->
     </div>
     <div class="col-sm-6">
         <h3>Update</h3>
@@ -66,3 +60,4 @@
         <button type="button" class="btn btn-danger" ng-click="deleteAppInst()">Delete</button>
     </div>
 </div>
+<a href back-button>back</a>
