--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -6,6 +6,7 @@
     <li>Name : {{lb.name}}</li>
     <li>InstallationPath : {{lb.installationPath}}</li>
     <li>Host : {{lb.host}}</li>
+    <li>Port : {{lb.publicPort}}</li>
     <li>sshKey : {{lb.sshKey}}</li>
     <li>Number of applications : {{lb.applications.length}}</li>
 </ul>
