--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -65,8 +65,7 @@
 
 
 
-<!--
+
 <hr>
-<h1>Update Load Balancer (not implemented)</h1>
-<lb-form loadBalancer="lb"></lb-form>
--->
+
+<lb-form ng-if="lbLoadingDone" ></lb-form>
