--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -56,7 +56,7 @@
                        placeholder="Enter application name">
             </div>
             <div class="form-group">
-                <label for="inAppPublicUrl">Public URL</label>
+                <label for="inAppPublicUrl">Public Path</label>
                 <input type="text" ng-model="app.publicURL" class="form-control " id="inAppPublicUrl" name="publicUrl"
                        required
                        placeholder="Enter public url">
@@ -114,7 +114,8 @@
 
 <div class="row">
     <div class="col-sm-6">
-        <h3>New Load Balancer </h3>
+        <lb-form></lb-form>
+        <!--<h3>New Load Balancer </h3>
 
         <form role="form" ng-submit="createLoadBalancer()">
 
@@ -152,6 +153,7 @@
 
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
+        -->
     </div>
 
 
