--- a/gateway-app/src/main/resources/web/gateway/appGroup.html
+++ b/gateway-app/src/main/resources/web/gateway/appGroup.html
@@ -8,7 +8,7 @@ Nothing more here..
 
 <div class="list-group">
     <a href="#/app/{{a.id}}" class="list-group-item" ng-repeat="a in allAppsInGroup">
-        <b> {{a.name}}</b> {{a.publicURL}} ({{a.id}})
+        <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}})
     </a>
 
 
