--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -2,8 +2,6 @@
 <h3 ng-show="!isNewLb">Update Load Balancer </h3>
 <h3 ng-show="isNewLb">New Load Balancer </h3>
 
-Is new LB : {{isNewLb}}
-
 <form role="form" ng-submit="updateOrCreateLB()">
 
     <div class="form-group">
@@ -32,8 +30,8 @@ Is new LB : {{isNewLb}}
     </div>
 
 
-    <button type="submit" class="btn btn-primary" ng-show="isNewLb">Create</button>
-    <button type="submit" class="btn btn-primary" ng-show="!isNewLb">Update</button>
+    <button type="submit" class="btn btn-primary" ng-hide="lb.id">Create</button>
+    <button type="submit" class="btn btn-primary" ng-show="lb.id">Update</button>
 </form>
 <!--
 <pre>{{lb|json}}</pre>-->
