--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -23,6 +23,12 @@
                placeholder="Enter path">
     </div>
     <div class="form-group">
+        <label for="inLbPublicPort">Public Port</label>
+        <input type="number" ng-model="lb.publicPort" class="form-control " id="inLbPublicPort"
+               required
+               placeholder="Enter public port">
+    </div>
+    <div class="form-group">
         <label for="inLbHost">SSH Key</label>
         <input type="text" ng-model="lb.sshKey" class="form-control " id="inLbSshKey"
                required
