--- a/gateway-app/src/main/resources/web/gateway/appGroup.html
+++ b/gateway-app/src/main/resources/web/gateway/appGroup.html
@@ -1,8 +1,8 @@
 <h1>Group : {{group.name}} ({{group.id}})</h1>
 Nothing more here..
 
-<button type="button" class="btn btn-danger" ng-click="removeGroup()">Delete group</button>
 
+<h2>Status</h2>
 
 <h3>All Applications in this group</h3>
 
@@ -13,3 +13,5 @@ Nothing more here..
 
 
 </div>
+
+<button type="button" class="btn btn-danger" ng-click="removeGroup()">Delete group</button>
