--- a/gateway-app/src/main/resources/web/gateway/appform.html
+++ b/gateway-app/src/main/resources/web/gateway/appform.html
@@ -24,13 +24,13 @@ localApp:
         <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
     </div>
 
-    <div class="form-group" ng-hide="appObj">
+    <!--<div class="form-group" ng-hide="appObj">
         <label for="selectAppGroup">Application Group</label>
         <select ng-model="localApp.applicationGroupId" name="applicationGroupId" id="selectAppGroup"
                 ng-options=" v.id as v.name for v in allAppGroups" class="form-control" required>
             <option value="">Select group (or create one above)</option>
         </select>
-    </div>
+    </div>-->
 
 
     <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid" ng-show="appObj">Update</button>
